# Application

./: CMakeLists.txt
src/: MainForm.ui  application.cpp  application.h  main.cpp  window.cpp  window.h
src/server/: main  server.c  server.h
src/ui/: graphics_view.cpp  graphics_view.h  text_area.cpp  text_area.h
